# polyconf-2014-haskell-webapp

./: .gitignore  .project-settings.yml  Application.hs  Foundation.hs  Import.hs  Settings.hs  SharedTypes.hs  build.sh  devel.hs  foo.cabal
Client/: Debounce.hs  Home.hs  Race.hs  STM.hs
Handler/: Fay.hs  Home.hs
config/: deploy.yaml  keter.yaml  keter.yml  postgresql.yml  routes
deploy/: Procfile
fay/: Home.hs  Lib.hs
fay-shared/: SharedTypes.hs
templates/: debounce.hamlet  default-layout-wrapper.hamlet  homepage.hamlet  race.hamlet  race.lucius  stm.hamlet  type-safe-comm.hamlet  type-safe-comm.lucius
